--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -16,9 +16,21 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:itemIconTint="@color/navbar_items"
+        app:itemTextColor="@color/navbar_items"
         android:layout_alignParentBottom="true"
         app:menu="@menu/navigation_menu"
-        android:background="?android:attr/windowBackground"/>
+        android:background="@color/navBarColor"/>
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
     
 
 </RelativeLayout>
