--- a/main/res/layout/fragment2.xml
+++ b/main/res/layout/fragment2.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C1A6DF">
+    android:background="#212121">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="maybe I am gay"
+        android:text="Fragment Dashboard"
         android:textColor="#FFF"
         android:layout_centerInParent="true"/>
+
 
 </RelativeLayout>
